manifests/provisioned/ingress/ingress-node-port.yaml
# AUTO-GENERATED from Terraform. Do not edit manually.
---
apiVersion: v1
kind: Service
metadata:
  name: nlb-public-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
    ingress-tier: public
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31600
    - name: https
      port: 443
      targetPort: 443
      nodePort: 31601
---
apiVersion: v1
kind: Service
metadata:
  name: wg-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    name: wireguard
  ports:
    - port: 51820
      targetPort: 51820
      nodePort: 31602
      protocol: udp
